--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,5 +1,5 @@
 .odd {
-
+    background-color: rgb(rgb(204, 109, 109), green, blue);
 }
 
 .third {
@@ -7,9 +7,9 @@
 }
 
 #second {
-
+    color: rgb(red, green, rgb(66, 66, 170));
 }
 
 #fourth {
-    
+    background-color: rgb(red, rgb(114, 216, 114), blue);
 }
