--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,15 +1,19 @@
 .odd {
     background-color: rgb(rgb(204, 109, 109), green, blue);
+    font-family: "Verdana","DejaVu Sans", sans serif;
 }
 
 .third {
-
+    font-size: 24px;
 }
 
 #second {
     color: rgb(red, green, rgb(66, 66, 170));
+    font-size: 36px;
 }
 
 #fourth {
     background-color: rgb(red, rgb(114, 216, 114), blue);
+    font-size: 24px;
+    font-weight: bold;
 }
