--- a/foundations/05-descendant-combinator/style.css
+++ b/foundations/05-descendant-combinator/style.css
@@ -1,5 +1,5 @@
 div p {
-    background-color: hwb(60 38% 0%);
+    background-color: rgb(255, 255, 97);
     color: hsl(0, 100%, 33%);
     font-size: 20px;
     text-align: center;
