--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,18 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 20px 12px;
+  align-items: center;
+}
+
+.left-side, .right-side, .links {
+  display: flex;
+  gap: 24px;
+}
+
+.left-side {
+  flex: 1;
 }
 
 .profile-image {
@@ -45,4 +57,5 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0;
 }
