--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,27 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 64px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.fruit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  flex-wrap: wrap;
+  gap: 36px;
+}
+
+.text {
+  text-align: center;
 }
 
 /* do not edit this footer */
