--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,20 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(128, 128, 128);
 }
 
 img {
@@ -16,6 +30,13 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 18px;
+  transition: .2s;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #d8d8d8;
 }
 
 input {
@@ -24,4 +45,35 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header, .content, .footer, .left-links, .right-links, .buttons {
+  display: flex;
+  align-items: center;
+  
+}
+
+.header, .footer {
+  justify-content: space-between;
+  padding: 24px;
+}
+
+.left-links, .right-links {
+  justify-content: space-between;
+  gap: 16px;
+  font-weight: bold;
+}
+
+.content {
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+}
+
+.footer {
+  background: #eee;
+}
+
+.buttons {
+  gap: 8px;
 }
