--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,76 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  gap: 12px;
+}
+
+.header, .footer {
+  display: flex;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  align-items: center;
+  padding: 0 24px;
+  font-size: 48px;
+  letter-spacing: -2px;
+  font-weight: bold;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
-  width: 300px;
+  min-width: 350px;
   background: royalblue;
+  font-size: 24px;
+  flex-shrink: 0;
+}
+
+.sidebar > ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding: 0 24px;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+  transition: .1s;
+}
+
+a:hover {
+  border-bottom: 2px solid white;
+}
+
+.card-bar {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 48px;
+  gap: 36px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  max-width: 300px;
+  padding: 24px;
+  font-size: 16px;
 }
